--- a/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
+++ b/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -20,11 +20,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="GradientView" customModule="Koting" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="224"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="785"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aXB-dl-3y6">
-                    <rect key="frame" x="16" y="44" width="343" height="129"/>
+                    <rect key="frame" x="16" y="52" width="343" height="129"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Iba-D8-XA1">
                             <rect key="frame" x="243" y="20" width="80" height="80"/>
@@ -48,7 +48,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="4Wt-ld-mw8">
-                            <rect key="frame" x="20" y="70" width="180" height="42"/>
+                            <rect key="frame" x="20" y="70" width="180" height="44"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="내 동물상 | 공룡상" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-cA-Was">
                                     <rect key="frame" x="0.0" y="0.0" width="180" height="18"/>
@@ -60,11 +60,11 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="il5-pV-esu">
-                                    <rect key="frame" x="0.0" y="18" width="80" height="24"/>
+                                    <rect key="frame" x="0.0" y="18" width="80" height="26"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="80" id="bib-sG-tsf"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="11.5"/>
                                     <state key="normal" title="다시측정하기"/>
                                     <connections>
                                         <action selector="measureButtonTapped:" destination="-1" eventType="touchUpInside" id="fJy-cu-FB3"/>
@@ -89,12 +89,12 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="aXB-dl-3y6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2Xl-vy-mrH"/>
-                <constraint firstItem="aXB-dl-3y6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Qkc-V8-3yV"/>
+                <constraint firstItem="aXB-dl-3y6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="Qkc-V8-3yV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aXB-dl-3y6" secondAttribute="trailing" constant="16" id="SHo-vS-wt2"/>
                 <constraint firstItem="aXB-dl-3y6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="XdQ-aQ-GfG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="42.757009345794387" y="-506.04751619870416"/>
+            <point key="canvasLocation" x="31.199999999999999" y="-308.49753694581284"/>
         </view>
     </objects>
     <resources>
