--- a/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
+++ b/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
@@ -11,20 +11,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyInfoHearderVC" customModule="Koting" customModuleProvider="target">
             <connections>
                 <outlet property="matchPercentLabel" destination="Mqg-eX-Efv" id="itU-HO-X1O"/>
-                <outlet property="measureButton" destination="il5-pV-esu" id="4XA-sB-5eL"/>
                 <outlet property="myAnimalFaceImage" destination="LRF-K5-Dff" id="Cy1-Nl-Sfq"/>
                 <outlet property="myAnimalFaceLabel" destination="p6F-cA-Was" id="rDN-Ss-Hcd"/>
+                <outlet property="nickName" destination="4JH-sA-hSi" id="X9q-Kb-yAQ"/>
                 <outlet property="subHeader" destination="aXB-dl-3y6" id="Gob-Ii-2N9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="GradientView" customModule="Koting" customModuleProvider="target">
+        <view clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="GradientView" customModule="Koting" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="785"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aXB-dl-3y6">
-                    <rect key="frame" x="16" y="52" width="343" height="129"/>
+                    <rect key="frame" x="16" y="90" width="343" height="130"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Iba-D8-XA1">
                             <rect key="frame" x="243" y="20" width="80" height="80"/>
@@ -38,7 +38,7 @@
                                 </imageView>
                             </subviews>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="매칭확률 68.2%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mqg-eX-Efv">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="매칭률 68.2%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mqg-eX-Efv">
                             <rect key="frame" x="20" y="30" width="180" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="180" id="09V-iE-9Ip"/>
@@ -47,7 +47,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="4Wt-ld-mw8">
+                        <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="4Wt-ld-mw8">
                             <rect key="frame" x="20" y="70" width="180" height="44"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="내 동물상 | 공룡상" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6F-cA-Was">
@@ -59,17 +59,16 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="il5-pV-esu">
-                                    <rect key="frame" x="0.0" y="18" width="80" height="26"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JH-sA-hSi">
+                                    <rect key="frame" x="0.0" y="22" width="180" height="22"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="80" id="bib-sG-tsf"/>
+                                        <constraint firstAttribute="height" constant="22" id="O0I-wo-7AG"/>
+                                        <constraint firstAttribute="width" constant="180" id="WOL-3z-SqS"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="11.5"/>
-                                    <state key="normal" title="다시측정하기"/>
-                                    <connections>
-                                        <action selector="measureButtonTapped:" destination="-1" eventType="touchUpInside" id="fJy-cu-FB3"/>
-                                    </connections>
-                                </button>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="11.5"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                             </subviews>
                         </stackView>
                     </subviews>
@@ -81,20 +80,35 @@
                         <constraint firstItem="Mqg-eX-Efv" firstAttribute="top" secondItem="aXB-dl-3y6" secondAttribute="top" constant="30" id="mOa-Hi-GXf"/>
                         <constraint firstItem="Mqg-eX-Efv" firstAttribute="leading" secondItem="aXB-dl-3y6" secondAttribute="leading" constant="20" id="qud-iV-bBy"/>
                         <constraint firstItem="4Wt-ld-mw8" firstAttribute="leading" secondItem="aXB-dl-3y6" secondAttribute="leading" constant="20" id="smo-rQ-f5Q"/>
-                        <constraint firstAttribute="height" constant="129" id="tHp-Bm-rM1"/>
+                        <constraint firstAttribute="height" constant="130" id="tHp-Bm-rM1"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MyInfo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRe-RU-mK1">
+                    <rect key="frame" x="16" y="44" width="343" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Diw-5j-4yH"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                    <color key="shadowColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                    <size key="shadowOffset" width="1" height="1"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="aXB-dl-3y6" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2Xl-vy-mrH"/>
-                <constraint firstItem="aXB-dl-3y6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="Qkc-V8-3yV"/>
+                <constraint firstItem="CRe-RU-mK1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="2iy-bo-I7u"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CRe-RU-mK1" secondAttribute="trailing" constant="16" id="E68-Tl-4oQ"/>
+                <constraint firstItem="CRe-RU-mK1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="JVV-ya-Lp2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="aXB-dl-3y6" secondAttribute="trailing" constant="16" id="SHo-vS-wt2"/>
+                <constraint firstItem="CRe-RU-mK1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="VZE-X3-1vz"/>
                 <constraint firstItem="aXB-dl-3y6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="XdQ-aQ-GfG"/>
+                <constraint firstItem="aXB-dl-3y6" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="90" id="uw1-Pf-6jq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="31.199999999999999" y="-308.49753694581284"/>
+            <point key="canvasLocation" x="106" y="-329"/>
         </view>
     </objects>
     <resources>
