--- a/Koting/Koting/View/MyInfoStoryboard.storyboard
+++ b/Koting/Koting/View/MyInfoStoryboard.storyboard
@@ -9,51 +9,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--My Page-->
-        <scene sceneID="iSq-sa-X0y">
-            <objects>
-                <viewController id="abU-Th-2Wl" customClass="MyInfoVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ikd-ZY-iHV" customClass="GradientView" customModule="Koting" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UzT-Nl-itI">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NhQ-M8-PMy">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jgt-zc-M8A">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="BDl-mw-WKr">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="yFa-sp-QRR"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="UzT-Nl-itI" firstAttribute="top" secondItem="yFa-sp-QRR" secondAttribute="top" id="B2Z-5l-O5B"/>
-                            <constraint firstItem="yFa-sp-QRR" firstAttribute="trailing" secondItem="UzT-Nl-itI" secondAttribute="trailing" id="MFy-F4-wyd"/>
-                            <constraint firstItem="yFa-sp-QRR" firstAttribute="bottom" secondItem="UzT-Nl-itI" secondAttribute="bottom" id="iXR-QN-cca"/>
-                            <constraint firstItem="UzT-Nl-itI" firstAttribute="leading" secondItem="yFa-sp-QRR" secondAttribute="leading" id="non-Eq-eUR"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="My Page" id="fZJ-oE-Yv8"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="C1p-yG-fmW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2468" y="-1846"/>
-        </scene>
         <!--MyInfo-->
         <scene sceneID="gOQ-bz-jjb">
             <objects>
@@ -102,13 +57,30 @@
                             <outlet property="delegate" destination="o6z-sB-RGY" id="UP7-o4-EgQ"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" title="Info" image="person.crop.circle" catalog="system" selectedImage="person.crop.circle" id="eLA-kp-BAk"/>
+                    <tabBarItem key="tabBarItem" title="Info" image="person.crop.circle" catalog="system" selectedImage="person.crop.circle" id="ARP-St-f8K"/>
                     <navigationItem key="navigationItem" title="MyInfo" id="uqm-f4-5TS"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t9h-ZR-lhR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5264.8000000000002" y="-1352.473763118441"/>
+            <point key="canvasLocation" x="-3910" y="-1550"/>
+        </scene>
+        <!--Info-->
+        <scene sceneID="DGi-LN-SgD">
+            <objects>
+                <viewController id="HMd-6q-fG5" customClass="MyInfoVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="f28-OP-LzB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="mGq-oD-IS0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Info" image="person.crop.circle" catalog="system" selectedImage="person.crop.circle" id="Y0N-Xt-aIf"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S1v-mQ-h6S" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2837" y="-1529"/>
         </scene>
     </scenes>
     <resources>
