myMeetingList 컬렉션뷰 오류 수정중

--- a/Koting/Koting/View/MyMeetingList.storyboard
+++ b/Koting/Koting/View/MyMeetingList.storyboard
@@ -357,7 +357,7 @@
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </state>
                                                             <connections>
-                                                                <action selector="acceptBtnTapped:" destination="bU6-nl-F4o" eventType="touchUpInside" id="KqQ-qL-pit"/>
+                                                                <action selector="acceptBtnTapped:" destination="bU6-nl-F4o" eventType="touchUpInside" id="niE-Sw-364"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTu-eF-IXf">
@@ -370,7 +370,7 @@
                                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </state>
                                                             <connections>
-                                                                <action selector="rejectBtnTapped:" destination="bU6-nl-F4o" eventType="touchUpInside" id="T3X-VX-6Ca"/>
+                                                                <action selector="rejectBtnTapped:" destination="bU6-nl-F4o" eventType="touchUpInside" id="ll1-hx-bIk"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
