--- a/Koting/Koting/View/MyInfoStoryboard.storyboard
+++ b/Koting/Koting/View/MyInfoStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -63,7 +63,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t9h-ZR-lhR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3910" y="-1550"/>
+            <point key="canvasLocation" x="-4182" y="-1892"/>
         </scene>
         <!--Info-->
         <scene sceneID="DGi-LN-SgD">
@@ -82,20 +82,110 @@
             </objects>
             <point key="canvasLocation" x="-3108" y="-1550"/>
         </scene>
-        <!--Edit My InfoVC-->
+        <!--NoticeVC-->
         <scene sceneID="eIk-Uv-pEz">
             <objects>
-                <viewController id="75C-2g-VZA" customClass="EditMyInfoVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NoticeVC" id="75C-2g-VZA" customClass="NoticeVC" customModule="Koting" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="b4A-9g-uws">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xch-FN-ZpS">
+                                <rect key="frame" x="0.0" y="100" width="375" height="567"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="80" id="2fw-gM-FF1" customClass="NoticeCell" customModule="Koting" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2fw-gM-FF1" id="cOE-gq-2iO">
+                                            <rect key="frame" x="0.0" y="0.0" width="349.5" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1v6-wr-NSB">
+                                                    <rect key="frame" x="32" y="46" width="309.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahk-pZ-Okx">
+                                                    <rect key="frame" x="32" y="11" width="309.5" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="OtS-tf-ZPY"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ahk-pZ-Okx" firstAttribute="leading" secondItem="cOE-gq-2iO" secondAttribute="leadingMargin" constant="16" id="5fy-Tm-lBZ"/>
+                                                <constraint firstItem="1v6-wr-NSB" firstAttribute="leading" secondItem="cOE-gq-2iO" secondAttribute="leadingMargin" constant="16" id="HkC-LV-jhQ"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1v6-wr-NSB" secondAttribute="trailing" id="T00-Gc-AA1"/>
+                                                <constraint firstItem="1v6-wr-NSB" firstAttribute="top" secondItem="ahk-pZ-Okx" secondAttribute="bottom" constant="5" id="Yrz-oL-fF5"/>
+                                                <constraint firstItem="ahk-pZ-Okx" firstAttribute="top" secondItem="cOE-gq-2iO" secondAttribute="topMargin" id="taf-Sl-Ew6"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ahk-pZ-Okx" secondAttribute="trailing" id="ucM-h4-Rt0"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="date" destination="1v6-wr-NSB" id="Veb-kc-oX2"/>
+                                            <outlet property="title" destination="ahk-pZ-Okx" id="s1M-YG-vFd"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EhS-xL-Ho7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공지사항" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gP0-gi-GO2">
+                                        <rect key="frame" x="32" y="41.5" width="343" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPq-Kv-0dA">
+                                        <rect key="frame" x="16" y="8" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="mkc-DX-HNQ"/>
+                                            <constraint firstAttribute="width" constant="25" id="qPS-C5-wKM"/>
+                                        </constraints>
+                                        <color key="tintColor" red="0.57045853140000002" green="0.57047235969999999" blue="0.57046490910000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" image="xmark" catalog="system"/>
+                                        <connections>
+                                            <action selector="closeButtonTapped:" destination="75C-2g-VZA" eventType="touchUpInside" id="IEd-or-r4M"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="MPq-Kv-0dA" firstAttribute="leading" secondItem="EhS-xL-Ho7" secondAttribute="leading" constant="16" id="0Ow-ET-fJf"/>
+                                    <constraint firstAttribute="trailing" secondItem="gP0-gi-GO2" secondAttribute="trailing" id="4G1-9N-BPS"/>
+                                    <constraint firstAttribute="bottom" secondItem="gP0-gi-GO2" secondAttribute="bottom" constant="25" id="MRf-qp-B2g"/>
+                                    <constraint firstAttribute="height" constant="100" id="OUX-aA-vDy"/>
+                                    <constraint firstItem="gP0-gi-GO2" firstAttribute="leading" secondItem="EhS-xL-Ho7" secondAttribute="leading" constant="32" id="VvQ-IS-nsI"/>
+                                    <constraint firstItem="MPq-Kv-0dA" firstAttribute="top" secondItem="EhS-xL-Ho7" secondAttribute="top" constant="8" id="jdQ-Lm-szm"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="tv9-Ks-ult"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="tv9-Ks-ult" firstAttribute="trailing" secondItem="xch-FN-ZpS" secondAttribute="trailing" id="S5J-gb-85p"/>
+                            <constraint firstItem="tv9-Ks-ult" firstAttribute="trailing" secondItem="EhS-xL-Ho7" secondAttribute="trailing" id="X5a-T6-ogv"/>
+                            <constraint firstItem="EhS-xL-Ho7" firstAttribute="leading" secondItem="tv9-Ks-ult" secondAttribute="leading" id="czC-Fu-BLx"/>
+                            <constraint firstItem="xch-FN-ZpS" firstAttribute="leading" secondItem="tv9-Ks-ult" secondAttribute="leading" id="feq-by-0Fl"/>
+                            <constraint firstItem="xch-FN-ZpS" firstAttribute="top" secondItem="tv9-Ks-ult" secondAttribute="top" constant="100" id="pd5-WE-0I9"/>
+                            <constraint firstItem="tv9-Ks-ult" firstAttribute="bottom" secondItem="xch-FN-ZpS" secondAttribute="bottom" id="pnd-Wl-f2p"/>
+                            <constraint firstItem="EhS-xL-Ho7" firstAttribute="top" secondItem="tv9-Ks-ult" secondAttribute="top" id="yv4-U7-5fZ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="xch-FN-ZpS" id="I37-6X-NY4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zPD-FM-JN7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2122" y="-1878"/>
+            <point key="canvasLocation" x="-2146.4000000000001" y="-1550.3748125937032"/>
         </scene>
         <!--MeetingList-->
         <scene sceneID="y8s-RB-yBr">
@@ -110,6 +200,7 @@
     </scenes>
     <resources>
         <image name="person.crop.circle" catalog="system" width="128" height="121"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
