채팅탭바 추가

--- a/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
+++ b/Koting/Koting/Controller/MyInfo/MyInfoHeaderVC.xib
@@ -83,7 +83,7 @@
                         <constraint firstAttribute="height" constant="130" id="tHp-Bm-rM1"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MyInfo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRe-RU-mK1">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="내 정보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRe-RU-mK1">
                     <rect key="frame" x="16" y="74" width="343" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Diw-5j-4yH"/>
